# signalfft-public

./: .gitignore  deploy_f2.sh  signalfft_validation_report.py
signalfft-collectors/: Dockerfile.lambda  README.md  pyproject.toml
signalfft-collectors/src/collectors/: __init__.py  base.py
signalfft-collectors/src/collectors/bluesky/: collector.py  handler.py
signalfft-collectors/src/collectors/edgar/: __init__.py  collector.py  handler.py
signalfft-collectors/src/collectors/filing_fetch/: __init__.py  collector.py  handler.py
signalfft-collectors/src/collectors/finnhub_news/: __init__.py  collector.py  handler.py
signalfft-collectors/src/collectors/outcome/: __init__.py  collector.py  handler.py
signalfft-collectors/src/collectors/reddit/: __init__.py  collector.py  handler.py
signalfft-collectors/tests/: test_base_collector.py  test_bluesky_collector.py  test_edgar_collector.py  test_filing_fetcher.py  test_finnhub_collector.py  test_outcome_collector.py  test_reddit_collector.py
signalfft-common/: README.md  pyproject.toml
signalfft-common/src/signalfft_common/: config.py  enums.py
signalfft-common/src/signalfft_common/dynamo/: __init__.py  client.py  keys.py
signalfft-common/src/signalfft_common/entity/: __init__.py  resolver.py
signalfft-common/src/signalfft_common/events/: __init__.py  schemas.py
signalfft-common/src/signalfft_common/graph/: __init__.py  writer.py
signalfft-common/src/signalfft_common/models/: __init__.py  attention_field.py  entity.py  event.py  feature.py  narrative.py  outcome.py  signal.py  trade_candidate.py  wave.py
signalfft-common/tests/: test_dynamo_client.py  test_dynamo_keys.py  test_entity_resolver.py  test_event_schemas.py  test_models.py
signalfft-engine/: Dockerfile  README.md  pyproject.toml
signalfft-engine/src/engine/: runner.py  runner_main.py
signalfft-engine/src/engine/ai_edges/: __init__.py
signalfft-engine/src/engine/attention_field/: service.py
signalfft-engine/src/engine/dashboard/: service.py
signalfft-engine/src/engine/directional/: __init__.py  aggregator.py  claude_interpreter.py  lexicon_scorer.py
signalfft-engine/src/engine/feature_extraction/: __init__.py  extractor.py  keyword_triage.py  service.py
signalfft-engine/src/engine/filing_processing/: __init__.py  backfill.py  extractor.py  indexer.py  service.py
signalfft-engine/src/engine/memory_graph/: __init__.py  query.py  writer.py
signalfft-engine/src/engine/narrative_gravity/: service.py
signalfft-engine/src/engine/outcome_tracking/: __init__.py  price_snapshot.py  service.py
signalfft-engine/tests/unit/: test_backfill.py  test_claude_interpreter.py  test_context_enricher.py  test_dashboard_service.py  test_delta_analyzer.py  test_delta_scoring.py  test_delta_service.py  test_direction_aggregator.py  test_feature_extractor.py  test_feature_service.py  test_filing_indexer.py  test_graph_query.py  test_graph_writer.py  test_keyword_triage.py  test_lexicon_scorer.py  test_price_snapshot.py  test_section_extractor.py  test_section_service.py  test_signal_scoring.py  test_signal_scoring_service.py  test_triage.py  test_triage_service.py
signalfft-execution/: Dockerfile  README.md  pyproject.toml
signalfft-execution/src/execution/: main.py  router.py  service.py  telemetry.py
signalfft-execution/tests/: test_alpaca_broker.py  test_paper_trade.py  test_router.py  test_telemetry.py
signalfft-risk-gateway/: Dockerfile  README.md  pyproject.toml
signalfft-risk-gateway/src/risk_gateway/: __main__.py  candidate_generator.py  provenance.py  rules.py  service.py  unified_main.py  unified_runner.py
signalfft-risk-gateway/tests/: test_candidate_generator.py  test_provenance.py  test_rules.py  test_service.py
(+68 files in other folders)
