[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalfft-collectors"
version = "0.1.0"
description = "Lambda-based data collectors for SEC EDGAR, news, and social sources"
requires-python = ">=3.11"
dependencies = [
    "signalfft-common>=0.1.0",
    "boto3>=1.34",
    "requests>=2.31",
    "alpaca-py>=0.30",
    "pytz",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "moto[dynamodb,s3,sqs]>=5.0",
    "responses>=0.25",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/collectors"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
