[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalfft-common"
version = "0.1.0"
description = "Shared models, enums, event schemas, and DynamoDB helpers for SignalFFT"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "boto3>=1.34",
    "requests>=2.31",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "moto[dynamodb,s3,sqs]>=5.0",
    "boto3>=1.34",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/signalfft_common"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
