[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalfft-engine"
version = "0.1.0"
description = "ECS Fargate services for feature extraction, signal scoring, wave engine, narrative gravity, attention field, and memory graph"
requires-python = ">=3.11"
dependencies = [
    "signalfft-common>=0.1.0",
    "boto3>=1.34",
    "alpaca-py>=0.30",
    "beautifulsoup4>=4.12",
    "requests>=2.31",
    "pytz",
    "anthropic>=0.40",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "moto[dynamodb,s3,sqs]>=5.0",
    "hypothesis>=6.0",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/engine"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
