[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "signalfft-execution"
version = "0.1.0"
description = "Order routing and broker adapter for SignalFFT (paper-trade first)"
requires-python = ">=3.12"
dependencies = [
    "signalfft-common>=0.1.0",
    "boto3>=1.34",
    "alpaca-py>=0.30",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "moto[dynamodb,s3,sqs]>=5.0",
    "ruff>=0.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/execution"]

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.pytest.ini_options]
testpaths = ["tests"]
